tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__InfiniteTurbines-AAAAAAAAAAAAAAAAAAAMeA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3192,
  "prerequisites": [
    3188
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Some turbine materials are not available for you, either because you don't have the material itself or because the Dynamo Hatch in the turbine cannot handle the power output from plasma. It will be a different story in UHV, when you can once again quadruple the max output of each turbine, and also unlock Infinity as an option for turbines.\n\nHuge Infinity 300% 6,451,200 EU/t\nHuge Infinity Catalyst 231% 1,236,480 EU/t\n\nYes, that's basically it. You can use any material from the previous turbine quests, but when you make the t8 rocket and can mine Infinity Catalyst, these are the two options. Obviously, Infinity is much better, but also much more expensive. If you stick with fusion, you will need several of those to push through the endgame. Remember that you can input plasma beyond the optimal flow, and get more out of each turbine at the cost of fuel efficiency.\n\nMake a normal or buffered UHV dynamo to complete the quest.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Infinite Turbines",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3188
  ],
  "rewards": [],
  "tasks": []
}
