tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__IntegratedOreFac-3hN7FykMSJSWSykZiEWvfQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2957818858054201213,
  "prerequisites": [
    2617,
    2665
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Integrated Ore Factory allows you to process ores through multiple processes at once.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lIntegrated Ore Factory - All in One!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2617,
    2665
  ],
  "rewards": [],
  "tasks": []
}
