tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__KineticWaterPowe-AAAAAAAAAAAAAAAAAAAEcw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1139,
  "prerequisites": [
    1137
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Kinetic Water Generator allows Kinetic Units to be produced via the movement of water in river and ocean biomes. As with the Kinetic Wind Generator, it requires either Gearbox Rotor. Search NEI for appropriate options.\n\nIf the Kinetic Water Generator's Rotor isn't entirely submerged in water, it will alert you there is \"no room for the rotor\". If the Kinetic Water Generator isn't placed in a river, ocean or deep ocean biome, it will alert you it \"must be placed in a river or ocean biome\". Check the Game Mechanics spreadsheet on Discord for a list of biomes and their tags.\n\nWhile inconvenient, the Water Generator runs more consistently.\n\n[warn]You can use Witchery (for example) to convert biomes.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lKinetic Water Power HV",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1137
  ],
  "rewards": [],
  "tasks": []
}
