tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__KineticWindPower-AAAAAAAAAAAAAAAAAAAEcg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1138,
  "prerequisites": [
    1137
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Kinetic Wind Generator generates energy from wind power which varies randomly, although certain factors can change this.\n\nUnlike the Windmill, the Kinetic Wind Generator will require maintenance in the form of Rotors. These are needed to run the Kinetic Wind Generator.\nOnce a Rotor is placed inside the GUI, the block is given sufficient space, and the current wind level is adequate for the current rotor, the Kinetic Wind Generator will begin to generate Kinetic Energy.\n\nThis can be converted into EU by using a Kinetic Generator attached to the correct face (the black circle).\n\nAbout Wind\nFirst off, the wind strength of a particular area is affected by 3 factors: Height, Weather, and Chance. The higher up in the world you are, the higher the wind level. Below y64, there is never enough wind to be used, and KWG's will not function at all. Weather will also give boosts; Rainy weather will give a 20% boost to normal wind levels, and stormy weather will give a 50% boost. The final factor of chance makes the wind strength vary randomly, however there is a limited range of variation.\n\nThe easiest way to check the current wind level in an area is by using a Windmeter. Wind is strongest at around Y160, towards the build limit of Y255 there is very little wind, hence no point attempting to run Windmills that high. While inconvenient, the Wind Generator can run anywhere.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lKinetic Wind Power HV",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1137
  ],
  "rewards": [],
  "tasks": []
}
