tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__LiquidCoolingTow-AAAAAAAAAAAAAAAAAAAMyw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3275,
  "prerequisites": [
    2675,
    3273
  ],
  "properties": {
    "auto_claim": false,
    "desc": "I have started to hit the limit of the multiblock without overclocking it, so I decided to give it a liquid cooling tower. This will allow it to overclock like every other multi with 2x Speed and 4x EU/t.\n\nI will need to provide some distilled water to its hatch to absorb any excess heat.\n\n[note]The Liquid Cooling Tower allows the Multiblock to have 2/4 OC at the cost of 10L/s of distilled water when running. The input hatch is placed in the bottom center of the Liquid Cooling Tower.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Liquid Cooling Tower",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2675,
    3273
  ],
  "rewards": [],
  "tasks": []
}
